<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vibernate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section0">Calendar View</string>
    <string name="title_section1">List View</string>
    <string name="title_section2">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_color">Color Picker</string>
    <string name="color_picker_title">Select a color</string>

    <!-- Calendar Fragment strings -->
    <string name="day_sun">Sun</string>
    <string name="day_mon">Mon</string>
    <string name="day_tues">Tues</string>
    <string name="day_wed">Wed</string>
    <string name="day_thurs">Thurs</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>

    <string name="timer_hint_1">Click on a block</string>
    <string name="timer_hint_2">to view details</string>
    <string name="short_timer_no_display_weekview">Timer is too short to be displayed</string>
    <string name="onetime_timer_no_display_weekview">One-time timer are not displayed</string>

    <!-- Tutorial Instructions -->
    <string name="tutorial_instruction">
        Welcome to Vibernate!
    </string>
    <string name="tutorial_instruction_0">
        To get started, swipe left!
    </string>
    <string name="tutorial_instruction_1">
        Create a timer for your weekly events
    </string>
    <string name="tutorial_instruction_2">
        Get an overall look at your weekly schedule
    </string>
    <string name="tutorial_instruction_3">
        See specific information about a timer\nTap on a timer to modify
    </string>
    <string name="tutorial_instruction_4">
        Switch between week view and list view
    </string>
    <string name="tutorial_instruction_5">
        Welcome to Vibernate!
    </string>
    <string name="tutorial_instruction_6">
        Click begin to start using Vibernate!
    </string>
    <string name="tutorial_instruction_7_2">
        begin
    </string>

    <string name="tutorial_instruction_credits">
        Team Members
    </string>

    <string-array name="hints">
        <item>Visit space</item>
        <item>Ride elephant</item>
        <item>Hug raccoon</item>
        <item>Massage panda</item>
        <item>Milk cow</item>
        <item>Drink milk</item>
        <item>Grow mushrooms</item>
        <item>Eat spongecake</item>
        <item>Watch Teletubbies</item>
        <item>Eat homework</item>
        <item>Meet Bill Gates</item>
        <item>Meet Steve Jobs</item>
        <item>Smell flowers</item>
        <item>Go toilet</item>
        <item>Skip class</item>
        <item>Escape Sauron</item>
        <item>Jedi training</item>
        <item>Fly spaceship</item>
        <item>Play quidditch</item>
        <item>Buy wand</item>
        <item>Learn magic</item>
        <item>Wizard training</item>
        <item>Break hearts</item>
        <item>Watch rainbow</item>
        <item>Eat sriracha</item>
        <item>Eat nutella</item>
        <item>Take nap</item>
        <item>Drink water</item>
        <item>Play tetris</item>
        <item>Find love</item>
        <item>Wash hands</item>
        <item>Bike seawall</item>
        <item>Befriend Yordles</item>
        <item>Eat peanut</item>
        <item>Send snapchat</item>
        <item>Eat mango</item>
        <item>Drive taxi</item>
        <item>Run marathon</item>
        <item>Draw durian</item>
        <item>Make ice cream</item>
        <item>Take shower</item>
        <item>Make supper</item>
        <item>Play recorder</item>
        <item>Hop on one foot</item>
        <item>Eat timbit</item>
        <item>Pop balloons</item>
        <item>Go to war</item>
        <item>Do quests</item>
        <item>Farm EXP</item>
        <item>Buy lightsaber</item>
        <item>Retirement</item>
    </string-array>

    <string name="create_onetime_timer">Create a one-time timer</string>
    <string name="create_recurring_timer">Create a recurring timer</string>
    <string name="onetime">One-Time</string>
    <string name="recurring">Recurring</string>

</resources>
