<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white" android:nestedScrollingEnabled="true">

    <!-- Weekdays -->

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent" 	
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="5dp"
                  android:background="@color/white">

        <TextView android:text="@string/day_sun" style="@style/week_text"/>
        <TextView android:text="@string/day_mon" style="@style/week_text"/>
        <TextView android:text="@string/day_tues" style="@style/week_text"/>
        <TextView android:text="@string/day_wed" style="@style/week_text"/>
        <TextView android:text="@string/day_thurs" style="@style/week_text"/>
        <TextView android:text="@string/day_fri" style="@style/week_text"/>
        <TextView android:text="@string/day_sat" style="@style/week_text"/>

    </LinearLayout>

    <View style="@style/horizontal_divider"/>

    <!-- Timers -->
    <LinearLayout  android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="5"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"
                   android:background="@color/background">

        <include layout="@layout/timer_week_view"/>

    </LinearLayout>

    <!-- Individual timer info -->
    <android.support.v7.widget.CardView android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="2.5"
                                        android:background="@color/white">

        <LinearLayout android:id="@+id/timer_info_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:visibility="gone">
            <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                <TextView android:id="@+id/timer_name"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          style="@style/timer_title_text"/>
                <ImageView android:layout_height="wrap_content"
                           android:layout_width="wrap_content"
                           android:layout_toRightOf="@+id/timer_name"/>
                <Switch android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">
                <ImageView android:layout_height="wrap_content"
                           android:layout_width="wrap_content"
                           android:layout_alignParentLeft="true"/>
                    <TextView android:id="@+id/timer_start_time"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              style="@style/timer_time_text"/>
                    <TextView android:id="@+id/timer_hyphen"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_toRightOf="@+id/timer_start_time"
                              android:text=" - "
                              style="@style/timer_time_text"/>
                    <TextView android:id="@+id/timer_end_time"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_toRightOf="@+id/timer_hyphen"
                              style="@style/timer_time_text"/>
                    <TextView android:id="@+id/timer_days"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_below="@+id/timer_start_time"
                              style="@style/timer_days_text"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout android:id="@+id/timer_placeholder"
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:visibility="visible">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:text="@string/timer_hint_1"
                      style="@style/timer_time_text"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:text="@string/timer_hint_2"
                      style="@style/timer_days_text"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>