<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- Weekdays -->
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent" 	
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="5dp"
                  android:background="@color/white">
        <TextView android:text="@string/day_sun" style="@style/WeekText"/>
        <TextView android:text="@string/day_mon" style="@style/WeekText"/>
        <TextView android:text="@string/day_tues" style="@style/WeekText"/>
        <TextView android:text="@string/day_wed" style="@style/WeekText"/>
        <TextView android:text="@string/day_thurs" style="@style/WeekText"/>
        <TextView android:text="@string/day_fri" style="@style/WeekText"/>
        <TextView android:text="@string/day_sat" style="@style/WeekText"/>
    </LinearLayout>

    <!-- Timers -->
    <RelativeLayout android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="5"
          android:paddingLeft="15px"
          android:paddingRight="15px"
          android:background="@color/background">
        <com.napontaratan.vibernate.view.TimerWeekView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <!-- Individual timer info -->
    <com.daimajia.swipe.SwipeLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/timer_swipe_layout"
                                    android:orientation="horizontal"
                                    android:layout_width="match_parent"
                                    swipe:drag_edge="bottom"
                                    android:layout_height="0dp"
                                    android:layout_weight="2.5">
        <!-- Bottom View Start-->
        <include android:id="@+id/bottom_wrapper"
                 layout="@layout/swipelayout_bottom_view"/>
        <!-- Bottom View End-->

        <!-- Surface View Start -->
        <LinearLayout
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">
            <!--What you want to show in SurfaceView-->
            <RelativeLayout android:id="@+id/timer_info_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone">
                <TextView android:id="@+id/timer_name"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="20dp"
                          android:ellipsize="middle"
                          android:maxWidth="450px"
                          android:singleLine="true"
                          style="@style/TimerTitleText"/>
                <ImageView android:id="@+id/timer_type_icon"
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"
                           android:layout_marginBottom="20dp"
                           android:layout_toRightOf="@+id/timer_name"/>
                <Switch android:id="@+id/timer_switch"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_alignParentEnd="true"/>
                <ImageView android:id="@+id/timer_image_view"
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"
                           android:paddingRight="10dp"
                           android:layout_below="@id/timer_name"
                           android:src="@drawable/ic_action_timer"/>
                <TextView android:id="@+id/timer_start_time"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_toRightOf="@+id/timer_image_view"
                          android:layout_below="@+id/timer_type_icon"
                          style="@style/TimerTimeText"/>
                <TextView android:id="@+id/timer_hyphen"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_toRightOf="@+id/timer_start_time"
                          android:layout_below="@+id/timer_type_icon"
                          android:text=" - "
                          style="@style/TimerTimeText"/>
                <TextView android:id="@+id/timer_end_time"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_toRightOf="@+id/timer_hyphen"
                          android:layout_below="@+id/timer_type_icon"
                          style="@style/TimerTimeText"/>
                <TextView android:id="@+id/timer_days"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_below="@+id/timer_start_time"
                          android:layout_toRightOf="@+id/timer_image_view"
                          style="@style/TimerDaysText"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/timer_placeholder"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:clickable="false">
                <TextView android:id="@+id/timer_placeholder_1"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:padding="5dp"
                          android:text="@string/timer_hint_1"
                          style="@style/TimerPlaceholderTop"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_below="@+id/timer_placeholder_1"
                          android:padding="5dp"
                          android:text="@string/timer_hint_2"
                          style="@style/TimerPlaceholderBottom"/>
            </RelativeLayout>
        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>

</LinearLayout>